--- a/vercel.json
+++ b/vercel.json
@@ -1,42 +1,27 @@
 {
   "version": 2,
-  "framework": null,
   "functions": {
-
     "api/index.php": {
       "runtime": "vercel-php@0.7.2"
     }
   },
-  
-
-  "builds": [
+  "routes": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "installCommand": "npm install",
-        "buildCommand": "npm run build"
-      }
+      "src": "/build/(.*)",
+      "dest": "/public/build/$1"
+    },
+    {
+      "src": "/(assets|css|js|images|img|storage)/(.*)",
+      "dest": "/public/$1/$2"
+    },
+    {
+      "src": "/(favicon.ico|robots.txt)",
+      "dest": "/public/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.php"
     }
   ],
-  
-
- "routes": [
-        {
-            "src": "/build/(.)",
-            "dest": "/public/build/$1"
-        },
-        {
-            "src": "/(assets|css|js|images|img|storage)/(.)",
-            "dest": "/public/$1/$2"
-        },
-        {
-            "src": "/(favicon.ico|robots.txt)",
-            "dest": "/public/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/api/index.php"
-        }
-    ]
+  "buildCommand": "npm install && npm run build"
 }
