--- a/.vercelignore
+++ b/.vercelignore
@@ -1,1 +1,7 @@
 /vendor
+storage/logs/
+storage/framework/cache/
+storage/framework/sessions/
+storage/framework/views/
+!storage/framework/.gitignore
+!storage/logs/.gitignore
