--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     ],
     "routes": [
         {
-            "src": "/(build|css|js|img|storage|svg|assets)/(.*)",
+            "src": "/(assets|css|js|images|img|storage|favicon.ico|robots.txt)/(.*)",
             "dest": "/public/$1/$2"
         },
         {
