--- a/vercel.json
+++ b/vercel.json
@@ -37,6 +37,6 @@
         "VIEW_COMPILED_PATH": "/tmp",
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "database"
+        "SESSION_DRIVER": "cookie"
     }
 }
