--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,21 @@
 {
     "version": 2,
     "framework": null,
+
+    "buildCommand": "cp ./storage/certs/isrgrootx1.pem /tmp/isrgrootx1.pem && php artisan build",
+
     "builds": [
         {
             "src": "/api/index.php",
             "use": "vercel-php@0.7.2"
+           
         },
         {
             "src": "/public/**",
             "use": "@vercel/static"
         }
     ],
+
     "routes": [
         {
             "src": "/(assets|css|js|images|img|storage|favicon.ico|robots.txt)/(.*)",
@@ -25,10 +30,13 @@
             "dest": "/api/index.php"
         }
     ],
+
+ 
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "none",
         "APP_URL": "https://ert07.vercel.app/",
+        
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
@@ -37,6 +45,8 @@
         "VIEW_COMPILED_PATH": "/tmp",
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie"
+        "SESSION_DRIVER": "cookie",
+    
+        "DB_SSL_CA": "/tmp/isrgrootx1.pem"
     }
 }
