--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,16 @@
 {
     "version": 2,
     "framework": null,
-
-    "buildCommand": "cp ./storage/certs/isrgrootx1.pem /tmp/isrgrootx1.pem && php artisan build",
-
     "builds": [
         {
             "src": "/api/index.php",
             "use": "vercel-php@0.7.2"
-           
         },
         {
             "src": "/public/**",
             "use": "@vercel/static"
         }
     ],
-
     "routes": [
         {
             "src": "/(assets|css|js|images|img|storage|favicon.ico|robots.txt)/(.*)",
@@ -30,13 +25,10 @@
             "dest": "/api/index.php"
         }
     ],
-
- 
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "none",
         "APP_URL": "https://ert07.vercel.app/",
-        
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
@@ -46,7 +38,6 @@
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
-    
-        "DB_SSL_CA": "/tmp/isrgrootx1.pem"
+        "MYSQL_ATTR_SSL_CA": "/tmp/isrgrootx1.pem"
     }
 }
